# holdfastBalance

./: CMakeLists.txt  README.MD  holdfastBalance  input.txt  t.yaml
src/: Printer.hpp  main.cpp
src/Balance/: Balance.cpp  Balance.hpp
src/Game/: Game.cpp  Game.hpp
src/Regiment/: Regiment.cpp  Regiment.hpp
src/Regiment/Speciality/: Speciality.cpp  Speciality.hpp
